test/integration/bad/lang/bad_decl5.stan
model {
  array[3,3] x;
}
